--- a/css/style.css
+++ b/css/style.css
@@ -434,3 +434,9 @@ footer .copyright p {
     text-align: center;
   }
 }
+
+@media (max-width: 400px) {
+header.col-md-5 .product .product-img img {
+  width: 350px;
+}
+}
